--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.1.5.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.despegar.platform</groupId>
+	<groupId>org.fgaule.platform</groupId>
 	<artifactId>travel-agent</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>travel-agent</name>
@@ -16,7 +16,10 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<kotlin.version>1.3.21</kotlin.version>
+		<kotlin.version>1.3.72</kotlin.version>
+		<arrow.version>0.10.5</arrow.version>
+		<kotest.version>4.0.5</kotest.version>
+		<spring-cloud.version>2.2.2.RELEASE</spring-cloud.version>
 	</properties>
 
 	<dependencies>
@@ -35,14 +38,17 @@
 			<artifactId>spring-boot-starter-jetty</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.ws</groupId>
-			<artifactId>spring-ws-core</artifactId>
-		</dependency>
+		<!-- Serialization -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
 			<artifactId>jackson-module-kotlin</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.9.8</version>
+		</dependency>
+
 		<dependency>
 			<groupId>io.github.microutils</groupId>
 			<artifactId>kotlin-logging</artifactId>
@@ -56,6 +62,30 @@
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib-jdk8</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>io.arrow-kt</groupId>
+			<artifactId>arrow-core</artifactId>
+			<version>${arrow.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.arrow-kt</groupId>
+			<artifactId>arrow-core-data</artifactId>
+			<version>${arrow.version}</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-contract-wiremock</artifactId>
+			<version>${spring-cloud.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
+			<version>${spring-cloud.version}</version>
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -63,27 +93,31 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>io.kotlintest</groupId>
-			<artifactId>kotlintest-core</artifactId>
-			<version>3.3.2</version>
+			<groupId>io.kotest</groupId>
+			<artifactId>kotest-assertions-core-jvm</artifactId>
+			<version>4.0.5</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>io.kotlintest</groupId>
-			<artifactId>kotlintest-runner-junit5</artifactId>
-			<version>3.3.2</version>
+			<groupId>io.kotest</groupId>
+			<artifactId>kotest-runner-junit5-jvm</artifactId>
+			<version>${kotest.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.kotest</groupId>
+			<artifactId>kotest-assertions-arrow-jvm</artifactId>
+			<version>${kotest.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.kotest</groupId>
+			<artifactId>kotest-extensions-spring-jvm</artifactId>
+			<version>${kotest.version}</version>
 			<scope>test</scope>
 		</dependency>
 
-        <!-- Generate #toString for wsdl classes -->
-		<dependency>
-			<groupId>org.jvnet.jaxb2_commons</groupId>
-			<artifactId>jaxb2-basics-runtime</artifactId>
-			<version>0.12.0</version>
-			<scope>compile</scope>
-		</dependency>
 	</dependencies>
-
 	<build>
 		<sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
 		<testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
@@ -122,63 +156,6 @@
 						<version>${kotlin.version}</version>
 					</dependency>
 				</dependencies>
-			</plugin>
-			<plugin>
-				<groupId>org.jvnet.jaxb2.maven2</groupId>
-				<artifactId>maven-jaxb2-plugin</artifactId>
-				<version>0.14.0</version>
-				<executions>
-					<execution>
-						<id>xsd-generate</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<schemaLanguage>WSDL</schemaLanguage>
-					<generatePackage>falabella.wsdl</generatePackage>
-					<extension>true</extension>
-					<removeOldOutput>true</removeOldOutput>
-					<schemas>
-						<schema>
-							<url>https://oper.viajesfalabella.com/wsexportacion/wsBookings.asmx?WSDL</url>
-						</schema>
-					</schemas>
-					<args>
-						<arg>-XtoString</arg>
-						<arg>-Xfluent-builder</arg>
-							<arg>-rootSelectorClassName=Select</arg>
-							<arg>-newBuilderMethodName=builder</arg>
-							<arg>-newCopyBuilderMethodName=newCopyBuilder</arg>
-							<arg>-copyToMethodName=copyTo</arg>
-							<arg>-builderFieldSuffix=_Builder</arg>
-							<arg>-generateTools=y</arg>
-							<arg>-narrow=n</arg>
-							<arg>-copyPartial=y</arg>
-							<arg>-selectorClassName=Selector</arg>
-							<arg>-builderClassName=Builder</arg>
-							<arg>-builderInterfaceName=BuildSupport</arg>
-							<arg>-copyAlways=n</arg>
-							<arg>-buildMethodName=build</arg>
-							<arg>-endMethodName=end</arg>
-						<arg>-Ximmutable</arg>
-							<arg>-constructorAccess=public</arg>
-					</args>
-					<plugins>
-						<plugin>
-							<groupId>net.codesup.util</groupId>
-							<artifactId>jaxb2-rich-contract-plugin</artifactId>
-							<version>2.0.0</version>
-						</plugin>
-							<plugin>
-							<groupId>org.jvnet.jaxb2_commons</groupId>
-							<artifactId>jaxb2-basics</artifactId>
-							<version>0.12.0</version>
-						</plugin>
-					</plugins>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
